<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_margin="0dp"
              android:background="@android:color/background_light"
              android:padding="0dp"
              android:paddingBottom="0dp"
              android:paddingEnd="0dp"
              android:paddingLeft="0dp"
              android:paddingRight="0dp"
              android:paddingStart="0dp"
              android:paddingTop="0dp"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="0dp"
                  android:layout_margin="0dp"
                  android:background="@android:color/background_light"
                  android:padding="0dp"
                  android:paddingBottom="0dp"
                  android:paddingEnd="0dp"
                  android:paddingLeft="0dp"
                  android:paddingRight="0dp"
                  android:paddingStart="0dp"
                  android:paddingTop="0dp"
                  android:orientation="vertical"
                  android:layout_weight="2"
                  android:gravity="left"
                  tools:ignore="RtlHardcoded">

        <TextView
                android:id="@+id/url_edit_title"
                android:layout_width="wrap_content"
                android:layout_height="37dp"
                android:text="@string/urls"
                android:textSize="20sp"
                android:visibility="visible"
                android:baselineAligned="false"
                android:textAlignment="viewStart"
                android:textColor="@android:color/black"
                android:verticalScrollbarPosition="left"/>

        <EditText
                android:id="@+id/url_edit_text"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:paddingStart="2dp"
                android:hint="@string/input_urls"
                android:textSize="20sp"
                android:inputType="textUri"
                android:background="@null"/>
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_margin="0dp"
                  android:background="@android:color/background_light"
                  android:padding="0dp"
                  android:paddingBottom="0dp"
                  android:paddingEnd="0dp"
                  android:paddingLeft="0dp"
                  android:paddingRight="0dp"
                  android:paddingStart="0dp"
                  android:paddingTop="0dp"
                  android:orientation="vertical"
                  android:layout_weight="3"
                  android:layout_gravity="center_vertical"
                  android:gravity="top|fill_horizontal"
                  android:layout_height="0dp">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_margin="0dp"
                      android:background="@android:color/background_light"
                      android:padding="0dp"
                      android:paddingBottom="0dp"
                      android:paddingEnd="0dp"
                      android:paddingLeft="0dp"
                      android:paddingRight="0dp"
                      android:paddingStart="0dp"
                      android:paddingTop="0dp"
                      android:orientation="horizontal"
                      android:layout_weight="1"
                      android:layout_gravity="center_vertical"
                      android:gravity="bottom|center_horizontal|center"
                      tools:ignore="NestedWeights">

            <Button
                    android:id="@+id/button_flush_now"
                    android:layout_height="wrap_content"
                    android:text="@string/sync_now"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:textAlignment="center"
                    tools:ignore="ButtonStyle"/>


            <Button
                    android:id="@+id/button_backup_now"
                    android:layout_height="wrap_content"
                    android:text="@string/backup_now"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:textAlignment="center"/>
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_margin="0dp"
                      android:background="@android:color/background_light"
                      android:padding="0dp"
                      android:paddingBottom="0dp"
                      android:paddingEnd="0dp"
                      android:paddingLeft="0dp"
                      android:paddingRight="0dp"
                      android:paddingStart="0dp"
                      android:paddingTop="0dp"
                      android:orientation="horizontal"
                      android:layout_weight="1"
                      android:layout_gravity="center_vertical|center_horizontal"
                      android:gravity="top|center_horizontal">

            <Button
                    android:id="@+id/button_logout_logout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/log_out"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    tools:ignore="ButtonStyle"/>

            <Button
                    android:id="@+id/button_refresh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/refresh"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    tools:ignore="ButtonStyle"/>

            <Button
                    android:id="@+id/button_go"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ok"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    tools:ignore="ButtonStyle"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="0dp"
                  android:layout_margin="0dp"
                  android:background="@android:color/background_light"
                  android:padding="0dp"
                  android:paddingBottom="0dp"
                  android:paddingEnd="0dp"
                  android:paddingLeft="0dp"
                  android:paddingRight="0dp"
                  android:paddingStart="0dp"
                  android:paddingTop="0dp"
                  android:orientation="vertical"
                  android:layout_weight="10"
                  android:layout_gravity="center_vertical">

        <TextView
                android:id="@+id/statistics_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/statistics_string"
                android:textSize="20sp"
                android:visibility="visible"
                android:baselineAligned="false"
                android:textAlignment="viewStart"
                android:textColor="@android:color/black"
                android:verticalScrollbarPosition="left"/>

        <WebView
                android:id="@+id/statistics"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>